--- a/AutomationTests/pom.xml
+++ b/AutomationTests/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>naturalmilk</groupId>
-    <artifactId>naturalmilk</artifactId>
+    <groupId>naturalmilks</groupId>
+    <artifactId>naturalmilks</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -14,6 +14,13 @@
             <artifactId>selenium-java</artifactId>
             <version>2.53.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
 
 </project>
